--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -34,6 +34,7 @@ nav {
 
 nav>ul {
     display: flex;
+    align-items: center;
 }
 
 nav li {
@@ -44,4 +45,15 @@ nav li {
 nav a {
     text-decoration: none;
     color: #474747;
+}
+/* header related style*/
+.header{
+    background-color:#FFF8F3;
+}
+.banner{
+    padding: 30px 30px 30px 150px;
+    display: flex;
+}
+.profile-pic{
+    width: 500px;
 }
